--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,10 @@ dependencies:
   shared_preferences: ^2.2.2
   dio: ^5.3.2
   cached_network_image: ^3.3.0
-  firebase_core: ^2.32.0
-  firebase_auth: ^4.17.4
+  firebase_core: ^3.14.0
+  firebase_auth: ^5.6.0
   badges: ^3.1.1
+  cloud_firestore: ^5.6.9
 
 dev_dependencies:
   flutter_test:
